--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-# Подозрительно, что вы сюда заглянули
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Подозрительно, что вы сюда заглянули</h1>
+<p>Очень подозрительно...</p>
+</body>
+</html>
