--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Подозрительно, что вы сюда заглянули</h1>
-<p>Очень подозрительно...</p>
+<p>Но, раз уж вы уже здесь, посмотрите, что может оказаться полезным</p>
 </body>
 </html>
