--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
+        <font face="arial, verdana"> 
 <h1>Подозрительно, что вы сюда заглянули</h1>
 <img src="qejep.gif">
 <p>Но, раз уж вы уже здесь, посмотрите, что может оказаться полезным</p>
+        </font>
 </body>
 </html>
