--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body bgcolor="#fdf6e3">
         <font face="arial, verdana"> 
 <h1>Подозрительно, что вы сюда заглянули</h1>
-<img src="qejep.gif">
+<img src="sh.gif">
 <p>Но, раз уж вы уже здесь, посмотрите, что может оказаться полезным</p>
         </font>
 </body>
