--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body bgcolor="#fdf6e3">
         <font face="arial, verdana"> 
-<h1>Подозрительно, что вы сюда заглянули</h1>
+<h1>Подозрительно, что вы сюда заглянули...</h1>
 <img src="sh.gif">
-<p>Но, раз уж вы уже здесь, посмотрите, что может оказаться полезным</p>
+<tt>Но, раз уж вы уже здесь, посмотрите, что может оказаться полезным</tt>
         </font>
 </body>
 </html>
