--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body bgcolor="#fdf6e3">
-        <font face="arial, verdana"> 
+        <font face="Menlo"> 
 <h1>Подозрительно, что вы сюда заглянули...</h1>
 <img src="sh.gif">
 <tt>Но, раз уж вы уже здесь, посмотрите, что может оказаться полезным</tt>
