--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body bgcolor="#fdf6e3">
-        <font face="Menlo"> 
+        <font face="Helvetica Neue"> 
 <h1>Подозрительно, что вы сюда заглянули...</h1>
 <img src="sh.gif">
-<tt>Но, раз уж вы уже здесь, посмотрите, что может оказаться полезным</tt>
+<center>Но, раз уж вы уже здесь, посмотрите, что может оказаться полезным</center>
         </font>
 </body>
 </html>
