--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <body bgcolor="#fdf6e3">
         <font face="Helvetica Neue"> 
+                <center>
 <h1>Подозрительно, что вы сюда заглянули...</h1>
+                </center>
 <img src="sh.gif">
-<center>Но, раз уж вы уже здесь, посмотрите, что может оказаться полезным</center>
+<left>Но, раз уж вы уже здесь, посмотрите, что может оказаться полезным</left>
         </font>
 </body>
 </html>
