--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 <h1>Подозрительно, что вы сюда заглянули...</h1>
                 </center>
 <img src="sh.gif">
+<br>
 <left>Но, раз уж вы уже здесь, посмотрите, что может оказаться полезным</left>
+<br>
+Список книг для тех, кто хочет подружиться с головой
         </font>
 </body>
 </html>
