--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
         <font face="Helvetica Neue"> 
                 <center>
 <h1>Подозрительно, что вы сюда заглянули...</h1>
-                </center>
 <img src="sh.gif">
+</center>
 <br>
-<left>Но, раз уж вы уже здесь, посмотрите, что может оказаться полезным</left>
+<br>
+Но, раз уж вы уже здесь, посмотрите, что может оказаться полезным
+<br>
 <br>
 Список книг для тех, кто хочет подружиться с головой
         </font>
