--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
                 <center>
 <h1>Подозрительно, что вы сюда заглянули...</h1>
 <img src="sh.gif">
-</center>
 <br>
 <br>
-Но, раз уж вы уже здесь, посмотрите, что может оказаться полезным
+<h1>Но,</h1>
+<br> 
+<h2>раз уж вы уже здесь,</h2>
+<br>
+<h2>посмотрите, что может оказаться полезным:</h2>
 <br>
 <br>
 Список книг для тех, кто хочет подружиться с головой
+</center>
         </font>
 </body>
 </html>
