--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <h2>посмотрите, что может оказаться полезным:</h2>
 <br>
 <br>
-Список книг для тех, кто хочет подружиться с головой
+☞ Список книг для тех, кто хочет подружиться с головой <br>
+☞ Список книг для тех, кто все еще надеется стать оргазинованным <br>
+☞ Список книг для тех, кто любит интеллектуальную фантастику <br>
+<br>
+<br>
 </center>
         </font>
 </body>
