--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
 <h2>посмотрите, что может оказаться полезным:</h2>
 <br>
 <br>
-☞ Список книг для тех, кто хочет подружиться с головой <br>
-☞ Список книг для тех, кто все еще надеется стать оргазинованным <br>
-☞ Список книг для тех, кто любит интеллектуальную фантастику <br>
+<table>
+        <tr><td>
+        ☞ Список книг для тех, кто хочет подружиться с головой 
+        </tr></td>
+        <tr><td>
+        ☞ Список книг для тех, кто все еще надеется стать оргазинованным
+        </td></tr>
+        <tr><td>
+        ☞ Список книг для тех, кто любит интеллектуальную фантастику
+        </td></tr>
+</table>
 <br>
 <br>
 </center>
