--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         ☞ Список книг для тех, кто хочет подружиться с головой 
         </tr></td>
         <tr><td>
-        ☞ Список книг для тех, кто все еще надеется стать оргазинованным
+        ☞ Список книг для тех, кто все еще надеется стать организованным
         </td></tr>
         <tr><td>
         ☞ Список книг для тех, кто любит интеллектуальную фантастику
