--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body bgcolor="#fdf6e3">
-        <font face="Helvetica Neue"> 
+        <font face="Helvetica Neue, Arial"> 
                 <center>
 <h1>Подозрительно, что вы сюда заглянули...</h1>
-<img src="sh.gif">
+<img src="qejep.gif">
 <br>
 <br>
-<h1>Но,</h1>
+<h1>Однако,</h1>
 <br> 
 <h2>раз уж вы уже здесь,</h2>
 <br>
