--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <h1>Подозрительно, что вы сюда заглянули...</h1>
 <img src="qejep.gif">
 <br>
+<marquee height="15" width="500">
+        Много букоф много букоф много буков много букоф много букоф
+        </marquee>
 <br>
 <h1>Однако,</h1>
 <br> 
