--- a/index.html
+++ b/index.html
@@ -6,21 +6,26 @@
 <h1>Подозрительно, что вы сюда заглянули...</h1>
 <img src="qejep.gif">
 <br>
-<marquee height="20" width="500">
+<marquee height="1500" width="500" direction="up">
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
         Много букоф много букоф много буков много букоф много букоф
 </marquee>
 <br>
-<marquee height="20" width="500">
-        букоф много букоф много буков много букоф много букоф много бкоф
-</marquee>
-<br>
-<marquee height="20" width="500">
-        Много букоф много букоф много буков много букоф много букоф
-</marquee>
-<br>
-<marquee height="20" width="500">
-        букоф много букоф много буков много букоф много букоф много буков
-</marquee>
 <br>
 <h1>Однако,</h1>
 <br> 
