--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
 <h1>Подозрительно, что вы сюда заглянули...</h1>
 <img src="qejep.gif">
 <br>
-<marquee height="1500" width="500" direction="up">
+<marquee height="500" width="500" direction="up">
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
+        Много букоф много букоф много буков много букоф много букоф
         Много букоф много букоф много буков много букоф много букоф
         Много букоф много букоф много буков много букоф много букоф
         Много букоф много букоф много буков много букоф много букоф
