--- a/index.html
+++ b/index.html
@@ -6,41 +6,31 @@
 <h1>Подозрительно, что вы сюда заглянули...</h1>
 <img src="qejep.gif">
 <br>
-<marquee height="500" width="500" direction="up">
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
-        Много букоф много букоф много буков много букоф много букоф
+<marquee height="500" width="500" direction="down" slide>
+          
+           о проекте :: читательский маршрут :: статьи 
+       
+        многобукофмногобукофмногобуковмногобукофмногобукоф
+        букофмногобукофмногобуковмногобукофмногобукофмного
+        многобукофмногобуковмногобукофмногобукофмногобукоф
+        букофмногобукофмногобуковмногобукофмногобукофмного
+        многобукофмногобуковмногобукофмногобукофмногобукоф
+        букофмногобукофмногобуковмногобукофмногобукофмного
+        многобукофмногобуковмногобукофмногобукофмногобукоф
+        букофмногобукофмногобуковмногобукофмногобукофмного
+        многобукофмногобуковмногобукофмногобукофмногобукоф
+        букофмногобукофмногобуковмногобукофмногобукофмного
+        многобукофмногобуковмногобукофмногобукофмногобукоф
+        букофмногобукофмногобуковмногобукофмногобукофмного
+        многобукофмногобуковмногобукофмногобукофмногобукоф
+        букофмногобукофмногобуковмногобукофмногобукофмного
+        многобукофмногобуковмногобукофмногобукофмногобукоф
+        букофмногобукофмногобуковмногобукофмногобукофмного
+        многобукофмногобуковмногобукофмногобукофмногобукоф
+        букофмногобукофмногобуковмногобукофмногобукофмного
+        многобукофмногобуковмногобукофмногобукофмногобукоф
+        букофмногобукофмногобуковмногобукофмногобукофмного
+        многобукофмногобуковмногобукофмногобукофмногобукоф
 </marquee>
 <br>
 <br>
