--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <h1>Подозрительно, что вы сюда заглянули...</h1>
 <img src="qejep.gif">
 <br>
-<marquee height="500" width="500" direction="down" slide>
+<marquee height="500" width="500" direction="down" behavor="slide">
           
-           о проекте :: читательский маршрут :: статьи 
+<a href="index.html">о проекте</a> :: читательский маршрут :: статьи 
        
         многобукофмногобукофмногобуковмногобукофмногобукоф
         букофмногобукофмногобуковмногобукофмногобукофмного
