--- a/index.html
+++ b/index.html
@@ -2,59 +2,22 @@
 <html>
 <body bgcolor="#fdf6e3">
         <font face="Helvetica Neue, Arial"> 
-                <center>
-<h1>Подозрительно, что вы сюда заглянули...</h1>
-<img src="qejep.gif">
-<br>
-<marquee height="500" width="500" direction="down" behavor="slide">
-          
-<a href="index.html">о проекте</a> :: читательский маршрут :: статьи 
-       
-        многобукофмногобукофмногобуковмногобукофмногобукоф
-        букофмногобукофмногобуковмногобукофмногобукофмного
-        многобукофмногобуковмногобукофмногобукофмногобукоф
-        букофмногобукофмногобуковмногобукофмногобукофмного
-        многобукофмногобуковмногобукофмногобукофмногобукоф
-        букофмногобукофмногобуковмногобукофмногобукофмного
-        многобукофмногобуковмногобукофмногобукофмногобукоф
-        букофмногобукофмногобуковмногобукофмногобукофмного
-        многобукофмногобуковмногобукофмногобукофмногобукоф
-        букофмногобукофмногобуковмногобукофмногобукофмного
-        многобукофмногобуковмногобукофмногобукофмногобукоф
-        букофмногобукофмногобуковмногобукофмногобукофмного
-        многобукофмногобуковмногобукофмногобукофмногобукоф
-        букофмногобукофмногобуковмногобукофмногобукофмного
-        многобукофмногобуковмногобукофмногобукофмногобукоф
-        букофмногобукофмногобуковмногобукофмногобукофмного
-        многобукофмногобуковмногобукофмногобукофмногобукоф
-        букофмногобукофмногобуковмногобукофмногобукофмного
-        многобукофмногобуковмногобукофмногобукофмногобукоф
-        букофмногобукофмногобуковмногобукофмногобукофмного
-        многобукофмногобуковмногобукофмногобукофмногобукоф
-</marquee>
+Добро пожаловать на сайт qejep
 <br>
 <br>
-<h1>Однако,</h1>
+Название это не имеет никакого лингвистического смысла. Графически же это напоминает 
+лицо с прищуренными глазами. Так автор проекта удовлетворил свою страсть к 
+типографике и эмотиконам. 
+<br>
+Оформление сайта намерено аскетично. Вернее, оно отстуствует. Это сознательный ход.
+Обусловлен он ленью и - что более важно - убежденностью автора в философии Plain text.
+Слишком много в нашем сегодняшнем мире посвящено форме в ущерб содержанию. Нужно
+сделать смелый шаг и вернуться обратно к тексту. 
 <br> 
-<h2>раз уж вы уже здесь,</h2>
+Это тем более важно, поскольку, проект посвящен чтению и письму. Здесь вы найдете 
+описание разных стратегий работы с книгами, предложения по выстраиванию читательских
+маршрутов, советы, по освоению писательского мастерства.
 <br>
-<h2>посмотрите, что может оказаться полезным:</h2>
-<br>
-<br>
-<table>
-        <tr><td>
-        ☞ Список книг для тех, кто хочет подружиться с головой 
-        </tr></td>
-        <tr><td>
-        ☞ Список книг для тех, кто все еще надеется стать организованным
-        </td></tr>
-        <tr><td>
-        ☞ Список книг для тех, кто любит интеллектуальную фантастику
-        </td></tr>
-</table>
-<br>
-<br>
-</center>
         </font>
 </body>
 </html>
