--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
 <body bgcolor="#fdf6e3">
         <font face="Helvetica Neue, Arial"> 
-Добро пожаловать на сайт qejep
-<br>
-<br>
+Добро пожаловать на сайт 
+<br><br>
+qejep
+<br><br>
 Название это не имеет никакого лингвистического смысла. Графически же это напоминает 
 лицо с прищуренными глазами. Так автор проекта удовлетворил свою страсть к 
 типографике и эмотиконам. 
-<br>
+<br><br>
 Оформление сайта намерено аскетично. Вернее, оно отстуствует. Это сознательный ход.
 Обусловлен он ленью и - что более важно - убежденностью автора в философии Plain text.
 Слишком много в нашем сегодняшнем мире посвящено форме в ущерб содержанию. Нужно
 сделать смелый шаг и вернуться обратно к тексту. 
-<br> 
+<br><br>
 Это тем более важно, поскольку, проект посвящен чтению и письму. Здесь вы найдете 
 описание разных стратегий работы с книгами, предложения по выстраиванию читательских
 маршрутов, советы, по освоению писательского мастерства.
