--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ qejep
 лицо с прищуренными глазами. Так автор проекта удовлетворил свою страсть к 
 типографике и эмотиконам. 
 <br><br>
-Оформление сайта намерено аскетично. Вернее, оно отстуствует. Это сознательный ход.
+Оформление сайта намерено аскетично. Вернее, оно практически отстуствует. Это сознательный ход.
 Обусловлен он ленью и - что более важно - убежденностью автора в философии Plain text.
 Слишком много в нашем сегодняшнем мире посвящено форме в ущерб содержанию. Нужно
 сделать смелый шаг и вернуться обратно к тексту. 
@@ -19,6 +19,21 @@ qejep
 описание разных стратегий работы с книгами, предложения по выстраиванию читательских
 маршрутов, советы, по освоению писательского мастерства.
 <br>
+<br>
+*------------------------------------------------------*
+| There are no final decisions.                        |
+|                                                      |
+| No decision is cast in stone. Instead, consider each |
+| as being written in the sand at the beach, and plan  |
+| for change.                                          |
+*------------------------------------------------------*
+       o
+        o   ^__^
+         o  (oo)\_______
+            (__)\       )\/\
+                ||----w |
+                ||     ||
+
         </font>
 </body>
 </html>
