--- a/index.html
+++ b/index.html
@@ -20,19 +20,20 @@ qejep
 маршрутов, советы, по освоению писательского мастерства.
 <br>
 <br>
-*------------------------------------------------------*
-| There are no final decisions.                        |
-|                                                      |
-| No decision is cast in stone. Instead, consider each |
-| as being written in the sand at the beach, and plan  |
-| for change.                                          |
-*------------------------------------------------------*
-       o
-        o   ^__^
-         o  (oo)\_______
-            (__)\       )\/\
-                ||----w |
-                ||     ||
+<br>
+<br>
+<br>*----------------------------------------------------*
+<br>|   «Человек, который много, но плохо читал,         |
+<br>|   заслуживает скорее жалости, чем                  |
+<br>|   похвалы, за то, что так бездарно потратил время  |
+<br>|   и усилия». Мортимер Адлер.                       |
+<br>*----------------------------------------------------*
+<br>    o
+<br>      o     ^__^
+<br>         o  (oo)\_______
+<br>            (__)\       )\/\
+<br>                ||----w |
+<br>                ||     ||
 
         </font>
 </body>
