--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ qejep
 <br>
 <br>
 <br>
+<pre></pre>
 <br>*----------------------------------------------------*
 <br>|   «Человек, который много, но плохо читал,         |
 <br>|   заслуживает скорее жалости, чем                  |
@@ -34,7 +35,7 @@ qejep
 <br>            (__)\       )\/\
 <br>                ||----w |
 <br>                ||     ||
-
+</pre>
         </font>
 </body>
 </html>
