--- a/index.html
+++ b/index.html
@@ -21,20 +21,19 @@ qejep
 <br>
 <br>
 <br>
-<br>
-<pre></pre>
-<br>*----------------------------------------------------*
-<br>|   «Человек, который много, но плохо читал,         |
-<br>|   заслуживает скорее жалости, чем                  |
-<br>|   похвалы, за то, что так бездарно потратил время  |
-<br>|   и усилия». Мортимер Адлер.                       |
-<br>*----------------------------------------------------*
-<br>    o
-<br>      o     ^__^
-<br>         o  (oo)\_______
-<br>            (__)\       )\/\
-<br>                ||----w |
-<br>                ||     ||
+<pre>
+*----------------------------------------------------*
+|   «Человек, который много, но плохо читал,         |
+|   заслуживает скорее жалости, чем                  |
+|   похвалы, за то, что так бездарно потратил время  |
+|   и усилия». Мортимер Адлер.                       |
+*----------------------------------------------------*
+   o
+      o     ^__^
+         o  (oo)\_______
+            (__)\       )\/\
+                ||----w |
+                ||     ||
 </pre>
         </font>
 </body>
