--- a/index.html
+++ b/index.html
@@ -2,39 +2,36 @@
 <html>
 <body bgcolor="#fdf6e3">
         <font face="Helvetica Neue, Arial"> 
-Добро пожаловать на сайт 
-<br><br>
-qejep
-<br><br>
-Название это не имеет никакого лингвистического смысла. Графически же это напоминает 
-лицо с прищуренными глазами. Так автор проекта удовлетворил свою страсть к 
-типографике и эмотиконам. 
-<br><br>
-Оформление сайта намерено аскетично. Вернее, оно практически отстуствует. Это сознательный ход.
-Обусловлен он ленью и - что более важно - убежденностью автора в философии Plain text.
-Слишком много в нашем сегодняшнем мире посвящено форме в ущерб содержанию. Нужно
-сделать смелый шаг и вернуться обратно к тексту. 
-<br><br>
-Это тем более важно, поскольку, проект посвящен чтению и письму. Здесь вы найдете 
-описание разных стратегий работы с книгами, предложения по выстраиванию читательских
-маршрутов, советы, по освоению писательского мастерства.
 <br>
+<br>
+<br>
+<center>
+<font size="1">qejep</font>
 <br>
 <br>
 <pre>
-*----------------------------------------------------*
-|   «Человек, который много, но плохо читал,         |
-|   заслуживает скорее жалости, чем                  |
-|   похвалы, за то, что так бездарно потратил время  |
-|   и усилия». Мортимер Адлер.                       |
-*----------------------------------------------------*
-   o
-      o     ^__^
-         o  (oo)\_______
-            (__)\       )\/\
-                ||----w |
-                ||     ||
+        +---------------------+                 
+        |     карта сайта     |                 
+        +---+--------------+--+                 
+            |      |       |                    
+            |      |       |                    
+ +----------+      |       |                    
+ |                 |       |                    
+ |                 |       |                    
+ v                 |       |                    
++--------------+   |       |    +--------------+
+|   рецензии   |   |       +--->|  о проекте   |
++--------------+   |            +--------------+
+                   |                            
+                   |                            
+                   v                            
+           +---------------+                    
+           | читательский  |                    
+           |    маршрут    |                    
+           +---------------+                    
+
 </pre>
+</center>
         </font>
 </body>
 </html>
