--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+        <head>
+
+<style>
+         a:link {color:rgb(202, 4, 119);
+         text-decoration:none}
+         a:visited {color:rgb(202, 4, 119);
+         text-decoration:none}
+         a:hover {color:rgb(0, 128, 6)}
+        </style>
+
+        </head>
 <body bgcolor="#fdf6e3">
         <font face="Helvetica Neue, Arial"> 
 <br>
@@ -20,7 +31,7 @@
            |                 |       |                    
            v                 |       |                    
     +--------------+         |       |    +--------------+
-    |   рецензии   |         |       +--->|  о проекте   |
+    |   рецензии   |         |       +--->|  <a href="about.html">о проекте</a>   |
     +--------------+         |            +--------------+
                              |                            
                              |                            
