--- a/about.html
+++ b/about.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+
+        <style>
+        a:link {color:rgb(202, 4, 119);
+        text-decoration:none}
+        a:visited {color:rgb(202, 4, 119);
+        text-decoration:none}
+        a:hover {color:rgb(0, 128, 6)}
+        </style>   
+</head>
 <body bgcolor="#fdf6e3">
         <font face="Helvetica Neue, Arial"> 
+<font size="-1"><a href="index.html">главная</a> ⇢ о проекте<font>
+        <br>
+        <br>
 По какой-то неведомой причине вы оказались на странице проекта
 <br><br>
 qejep
