--- a/about.html
+++ b/about.html
@@ -12,7 +12,9 @@
 </head>
 <body bgcolor="#fdf6e3">
         <font face="Helvetica Neue, Arial"> 
-<font size="1"><a href="index.html">главная</a> ⇢ о проекте<font>
+                     ------------------- <br>
+<a href="index.html">главная</a> ⇢ о проекте <br>
+-------------------
         <br>
         <br>
 По какой-то неведомой причине вы оказались на странице проекта
