--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <br>
 По какой-то неведомой причине вы оказались на странице проекта
 <br><br>
-qejep
+<b>qejep</b>
 <br><br>
 Название это не имеет никакого лингвистического смысла. Графически же это напоминает 
 лицо с прищуренными глазами. Так автор проекта удовлетворил свою страсть к 
