--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
            |                 |       |                    
            v                 |       |                    
     +--------------+         |       |    +--------------+
-    |   рецензии   |         |       +--->|  <a href="about.html">о проекте</a>   |
+    |   <a href="reviews.html">рецензии</a>   |         |       +--->|  <a href="about.html">о проекте</a>   |
     +--------------+         |            +--------------+
                              |                            
                              |                            
