--- a/reviews.html
+++ b/reviews.html
@@ -11,7 +11,7 @@
         </style>   
 </head>
 <body bgcolor="#fdf6e3">
-        <font face="Helvetica Neue, Arial"> 
+        <font face="Lucida Console, Arial"> 
                      ----------------------------- <br>
 <a href="index.html">главная</a> ⇢ рецензии <br>
 -----------------------------
@@ -25,7 +25,7 @@
 чего-нибудь достойного.
 <br>
 <br>
-<b>~: РЕЦЕНЗИИ :~</b> 
+<center><b>~: РЕЦЕНЗИИ :~</b></center> 
 <br>
 <br>
 <a href="pennac.html">Даниэль Пеннак. Как роман: эссе</a><br>
