--- a/pennac.html
+++ b/pennac.html
@@ -11,9 +11,9 @@
         </style>   
 </head>
 <body bgcolor="#fdf6e3">
-        <font face="Helvetica Neue, Arial"> 
+        <font face="Lucida Console, Arial"> 
                      ----------------------------- <br>
-<a href="index.html">главная</a> ⇢ рецензии ⇢ Пеннак <br>
+<a href="index.html">главная</a> ⇢ <a href=reviews.html>рецензии</a> ⇢ Пеннак <br>
 -----------------------------
         <br>
         <br>
