--- a/pennac.html
+++ b/pennac.html
@@ -11,10 +11,10 @@
         </style>   
 </head>
 <body bgcolor="#fdf6e3">
-        <font face="Lucida Console, Arial"> 
-                     ----------------------------- <br>
+        <font face="Lucida Console, Monaco"> 
+                     --------------------------------------- <br>
 <a href="index.html">главная</a> ⇢ <a href=reviews.html>рецензии</a> ⇢ Пеннак <br>
------------------------------
+---------------------------------------
         <br>
         <br>
         Представьте себе диалог двух людей, обсуждающих, что каждый из них съел на завтрак. 
@@ -32,7 +32,7 @@
         Книги, также как и пища, нужны для того, чтобы удовлетворять голод. Хуже нет, когда нас начинают пичкать тем или другим.
         <br>
         <br>
-        Произведение замечательного французского писателя Даниэля Пеннака «Как роман»<sub>1</sub> призвано развеять священный 
+        Произведение замечательного французского писателя Даниэля Пеннака «Как роман»<sup>1</sup> призвано развеять священный 
         трепет перед «иконостасами» книжных шкафов и вернуть читателям радость дружеской встречи с книгой.
         <br>
         <br>
@@ -101,7 +101,7 @@
         3. Право не дочитывать. <br>
         4. Право перечитывать. <br>
         5. Право читать что попало. <br>
-        6. Право на боваризм.<sub>2</sub> <br>
+        6. Право на боваризм.<sup>2</sup> <br>
         7. Право читать где попало.<br>
         8. Право читать вслух.<br>
         9. Право втыкаться в текст (читать урывками).<br>
