--- a/reviews.html
+++ b/reviews.html
@@ -11,10 +11,10 @@
         </style>   
 </head>
 <body bgcolor="#fdf6e3">
-        <font face="Lucida Console, Arial"> 
-                     ----------------------------- <br>
+        <font face="Lucida Console, Monaco"> 
+                     ------------------------------- <br>
 <a href="index.html">главная</a> ⇢ рецензии <br>
------------------------------
+-------------------------------
         <br>
         <br>
 В этом разделе, как можно догадаться из названия, содержатся рецензии на книги. 
