--- a/pennac.html
+++ b/pennac.html
@@ -11,7 +11,8 @@
         </style>   
 </head>
 <body bgcolor="#fdf6e3">
-        <font face="Lucida Console, Monaco"> 
+        <font face="Lucida Console, Arial"> 
+
                      --------------------------------------- <br>
 <a href="index.html">главная</a> ⇢ <a href=reviews.html>рецензии</a> ⇢ Пеннак <br>
 ---------------------------------------
