--- a/reviews.html
+++ b/reviews.html
@@ -11,7 +11,7 @@
         </style>   
 </head>
 <body bgcolor="#fdf6e3">
-        <font face="Lucida Console, Helvetica"> 
+        <font face="Lucida Console, Roboto, Menlo, Helvetica"> 
                      ------------------------------- <br>
 <a href="index.html">главная</a> ⇢ рецензии <br>
 -------------------------------
@@ -25,11 +25,21 @@
 чего-нибудь достойного.
 <br>
 <br>
-<center><b>~: РЕЦЕНЗИИ :~</b></center> 
+<center><b>~: РЕЦЕНЗИИ :~</b>
 <br>
 <br>
-<a href="pennac.html">Даниэль Пеннак. Как роман: эссе</a><br>
+<table>
+<tr>
+<td>
+        <a href="pennac.html">Даниэль Пеннак. Как роман: эссе</a><br>
 
+</td>
+
+</tr>
+
+</table>
+
+</center> 
         </font>
 </body>
 </html>
