--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         </head>
 <body bgcolor="#fdf6e3">
-        <font face="Lucida Console, Roboto, Menlo, Helvetica"> 
+        <font face="Arial"> 
 <br>
 <br>
 <br>
