--- a/pennac.html
+++ b/pennac.html
@@ -11,7 +11,7 @@
         </style>   
 </head>
 <body bgcolor="#fdf6e3">
-        <font face="Courier"> 
+        <font face="Arial"> 
 
                      --------------------------------------- <br>
 <a href="index.html">главная</a> ⇢ <a href=reviews.html>рецензии</a> ⇢ Пеннак <br>
