--- a/reviews.html
+++ b/reviews.html
@@ -11,7 +11,7 @@
         </style>   
 </head>
 <body bgcolor="#fdf6e3">
-        <font face="Lucida Console, Roboto, Menlo, Helvetica"> 
+        <font face="Arial"> 
                      ------------------------------- <br>
 <a href="index.html">главная</a> ⇢ рецензии <br>
 -------------------------------
