--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         </style>   
 </head>
 <body bgcolor="#fdf6e3">
-        <font face="Arial"> 
+        <font face="Arial" size="2"> 
                      ----------------------------- <br>
 <a href="index.html">главная</a> ⇢ о проекте <br>
 -----------------------------
