--- a/about.html
+++ b/about.html
@@ -11,15 +11,16 @@
         </style>   
 </head>
 <body bgcolor="#fdf6e3">
-        <font face="Arial" size="2"> 
+        <font face="Arial"> 
                      ----------------------------- <br>
 <a href="index.html">главная</a> ⇢ о проекте <br>
 -----------------------------
         <br>
         <br>
+
 По какой-то неведомой причине вы оказались на странице проекта
 <br><br>
-<b>qejep</b>
+                       <b>qejep</b>
 <br><br>
 Название это не имеет никакого лингвистического смысла. Графически же это напоминает 
 лицо с прищуренными глазами. Так автор проекта удовлетворил свою страсть к 
@@ -33,6 +34,7 @@
 Это тем более важно, поскольку, проект посвящен чтению и письму. Здесь вы найдете 
 описание разных стратегий работы с книгами, предложения по выстраиванию читательских
 маршрутов, советы, по освоению писательского мастерства.
+
 <br>
 <br>
 <br>
