--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <body bgcolor="#fdf6e3">
 
 
-        <font face="Consolas"> 
+        <font face="Gill Sans"> 
                      ----------------------------- <br>
 <a href="index.html">главная</a> ⇢ о проекте <br>
 -----------------------------
