--- a/about.html
+++ b/about.html
@@ -12,7 +12,8 @@
 <body bgcolor="#fdf6e3">
 
 
-        <font face="Gill Sans"> 
+       
+<tt>
                      ----------------------------- <br>
 <a href="index.html">главная</a> ⇢ о проекте <br>
 -----------------------------
@@ -21,7 +22,7 @@
 
 По какой-то неведомой причине вы оказались на странице проекта
 <br><br>
-                       <b>qejep</b>
+<font face="Arial"><b>qejep</b> </font>
 <br><br>
 Название это не имеет никакого лингвистического смысла. Графически же это напоминает 
 лицо с прищуренными глазами. Так автор проекта удовлетворил свою страсть к 
@@ -32,10 +33,17 @@
 Слишком много в нашем сегодняшнем мире посвящено форме в ущерб содержанию. Нужно
 сделать смелый шаг и вернуться обратно к тексту. 
 <br><br>
-Это тем более важно, поскольку, проект посвящен чтению и письму. Здесь вы найдете 
-описание разных стратегий работы с книгами, предложения по выстраиванию читательских
-маршрутов, советы, по освоению писательского мастерства.
-
+Пока в проекте всего два содержательных раздела:
+ <br>
+1. Читательский маршрут. 
+<br>
+Здесь вы найдете списки литературы по всевозможным темам. Краткие анотации помогут вам соориентироваться.
+<br>
+<br>
+2. Путеводитель гика.
+<br>
+Специфический раздел, предназначенный для тех, кто хочет более эффективно использовать компьютер в академической жизни.
+</tt>
 <br>
 <br>
 <br>
@@ -53,6 +61,7 @@
                 ||----w |
                 ||     ||
 </pre>
-        </font>
+       
+
 </body>
 </html>
