--- a/index.html
+++ b/index.html
@@ -21,25 +21,27 @@
 <br>
 <br>
 <pre>
-                  +---------------------+                 
-                  |     карта сайта     |                 
-                  +---+--------------+--+                 
-                      |      |       |                    
-                      |      |       |                    
-           +----------+      |       |                    
-           |                 |       |                    
-           |                 |       |                    
-           v                 |       |                    
-    +--------------+         |       |    +--------------+
-    |   <a href="reviews.html">рецензии</a>   |         |       +--->|  <a href="about.html">о проекте</a>   |
-    +--------------+         |            +--------------+
-                             |                            
-                             |                            
-                             v                            
-                     +---------------+                    
-                     | читательский  |                    
-                     |    маршрут    |                    
-                     +---------------+                    
+                +---------------------+                  
+                |     карта сайта     |                  
+                +---+-----------+---+-+                  
+                    |      |    |   |                    
+                    |      |    |   |                    
+         +----------+      |    |   |                    
+         |                 |    |   |    +--------------+
+         |                 |    |   +--->|  <a href="about.html">о проекте</a>   |
+         v                 |    |        +--------------+
+ +--------------+          |    |                        
+ | путеводитель |          |    |                        
+ |     гика     |          |    |        +--------------+
+ +--------------+          |    +------->|   новости    |
+                           |             +--------------+
+                           |                             
+                           |                             
+                           v                             
+                   +---------------+                     
+                   | читательский  |                     
+                   |    маршрут    |                     
+                   +---------------+                            
 
 </pre>
 </center>
