--- a/about.html
+++ b/about.html
@@ -35,12 +35,12 @@
 <br><br>
 Пока в проекте всего два содержательных раздела:
  <br>
-1. Читательский маршрут. 
+1. <a href="readinglist.html">Читательский маршрут. </a>
 <br>
 Здесь вы найдете списки литературы по всевозможным темам. Краткие анотации помогут вам соориентироваться.
 <br>
 <br>
-2. Путеводитель гика.
+2. <a href="geeklist.html">Путеводитель гика.</a>
 <br>
 Специфический раздел, предназначенный для тех, кто хочет более эффективно использовать компьютер в академической жизни.
 </tt>
@@ -48,18 +48,19 @@
 <br>
 <br>
 <pre>
-*----------------------------------------------------*
-|   «Человек, который много, но плохо читал,         |
-|   заслуживает скорее жалости, чем                  |
-|   похвалы, за то, что так бездарно потратил время  |
-|   и усилия». Мортимер Адлер.                       |
-*----------------------------------------------------*
-   o
-      o     ^__^
-         o  (oo)\_______
-            (__)\       )\/\
-                ||----w |
-                ||     ||
+
+        o   o    изучай терминал!
+         )-(      /
+        (O O) ---
+         \=/
+        .-"-.
+       //\ /\\
+     _// / \ \\_
+        {,-.} 
+        || ||
+        || ||   
+      __|| ||__  
+
 </pre>
        
 
