--- a/index.html
+++ b/index.html
@@ -21,28 +21,26 @@
 <br>
 <br>
 <pre>
-                +---------------------+                  
-                |     карта сайта     |                  
-                +---+-----------+---+-+                  
-                    |      |    |   |                    
-                    |      |    |   |                    
-         +----------+      |    |   |                    
-         |                 |    |   |    +--------------+
-         |                 |    |   +--->|  <a href="about.html">о проекте</a>   |
-         v                 |    |        +--------------+
- +--------------+          |    |                        
- | путеводитель |          |    |                        
- |     гика     |          |    |        +--------------+
- +--------------+          |    +------->|   новости    |
-                           |             +--------------+
-                           |                             
-                           |                             
-                           v                             
-                   +---------------+                     
-                   | читательский  |                     
-                   |    маршрут    |                     
-                   +---------------+                            
-
+                          +---------------------+                  
+                          |     карта сайта     |                  
+                          +---+-----------+---+-+                  
+                              |      |    |   |                    
+                              |      |    |   |                    
+                 +------------+      |    |   |                    
+                 |                   |    |   |    +--------------+
+                 |                   |    |   +--->|  <a href="about.html">о проекте</a>    |
+                 v                   |    |        +--------------+
+       +------------------+       +--+    |                        
+       |<a href="geeklist.html">путеводитель гика</a> |       |       |                        
+       +------------------+       |       |        +--------------+
+                                  |       +------->|   новости    |
+                                  |                +--------------+
+                                  |                                
+                                  |                                
+                                  v                                
+                        +--------------------+                      
+                        |<a href="readinglist.html">читательский маршрут</a>|                      
+                        +--------------------+                      
 </pre>
 </center>
         </font>
